--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ div.container {
             <a href="https://blog.legionos.org" class="navbar-item nav-links"
               >Blog</a
             >
-            <a href="contact.html" class="navbar-item nav-links">Contact</a>
+            <a href="https://legionos.org/contact.html" class="navbar-item nav-links">Contact</a>
             <a href="https://legionos.org/download" class="navbar-item nav-links">Download</a>
           </div>
         </div>
