update home links

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ div.container {
         </div>
         <div id="navbarBasic" class="navbar-menu">
           <div class="navbar-end">
+            <a href="https://legionos.org" class="navbar-item nav-links"
+            >Home</a
+          >
             <a href="https://blog.legionos.org" class="navbar-item nav-links"
               >Blog</a
             >
