Fixup minor issues

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="css/stats.css" />
     <style>
       h3 {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-family: sans-serif;
 	font-size: 13px;
-	color: #6600FF;
+	color: rgb(226, 14, 163);
 	text-align: center;
 }
 div.container {
@@ -98,7 +98,7 @@ div.container {
 
         <h3 class="text-center table-heading">SUPPORTED DEVICES</h3>
 
-        <table class="table table-striped" style=" font-weight: 600;">
+        <table class="table" >
             <thead class="table-success">
                 <tr>
                     <th>DEVICES</th>
