--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@ div.container {
       <!-- TABLE ENTRIES >> Supported Devices -->
       <div class="container">
 
-        <h3 class="text-center table-heading">SUPPORTED DEVICES</h3>
+        <div class="heading">
+          <h1 class="title is-4 has-text-centered ">SUPPORTED DEVICES</h1>
+          <hr />
+        </div>
 
         <table class="table" >
             <thead class="table-success">
@@ -116,8 +119,10 @@ div.container {
 
     <!-- TABLE ENTRIES >> Countries -->
     <div class="container">
-        <!-- Blog entry -->
-        <h3 class="text-center table-heading">TOP COUNTRIES</h3>
+      <div class="heading">
+        <h1 class="title is-4 has-text-centered ">TOP COUNTRIES</h1>
+        <hr />
+      </div>
         <table class="table table-striped">
             <thead class="table-success">
                 <tr>
@@ -136,7 +141,10 @@ div.container {
 
     <div class="container">
 
-      <h3 class="text-center table-heading">OS USED TO DOWNLOAD LEGION</h3>
+      <div class="heading">
+        <h1 class="title is-4 has-text-centered ">OS USED TO DOWNLOAD LEGIONOS</h1>
+        <hr />
+      </div>
 
         <table class="table table-striped">
             <thead class="table-success">
